Update JSON files

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tree-sitter-verilog",
+  "name": "tree-sitter-systemverilog",
   "version": "0.0.1",
-  "description": "Verilog grammar for tree-sitter",
-  "repository": "github:tree-sitter/tree-sitter-verilog",
+  "description": "SystemVerilog grammar for tree-sitter",
+  "repository": "github:gmlarumbe/tree-sitter-systemverilog",
   "license": "MIT",
   "main": "bindings/node",
   "types": "bindings/node",
@@ -26,10 +26,10 @@
   },
   "devDependencies": {
     "prebuildify": "^6.0.0",
-    "tree-sitter-cli": "^0.22.1"
+    "tree-sitter-cli": "^0.25.2"
   },
   "peerDependencies": {
-    "tree-sitter": "^0.21.0"
+    "tree-sitter": "^0.25.2"
   },
   "peerDependenciesMeta": {
     "tree-sitter": {
