--- a/package.json
+++ b/package.json
@@ -1,35 +1,43 @@
 {
   "name": "tree-sitter-systemverilog",
-  "version": "0.0.1",
-  "description": "SystemVerilog grammar for tree-sitter",
-  "repository": "github:gmlarumbe/tree-sitter-systemverilog",
+  "version": "0.1.0",
+  "description": "SystemVerilog 1800-2023 Parser",
+  "repository": "https://github.com/gmlarumbe/tree-sitter-systemverilog",
+  "funding": "https://github.com/sponsors/gmlarumbe",
   "license": "MIT",
+  "author": {
+    "name": "Gonzalo M. Larumbe",
+    "email": "gonzalomlarumbe@gmail.com",
+    "url": "https://gmlarumbe.com/"
+  },
   "main": "bindings/node",
   "types": "bindings/node",
   "keywords": [
     "incremental",
     "parsing",
     "tree-sitter",
-    "verilog"
+    "systemverilog"
   ],
   "files": [
     "grammar.js",
+    "tree-sitter.json",
     "binding.gyp",
     "prebuilds/**",
     "bindings/node/*",
     "queries/*",
-    "src/**"
+    "src/**",
+    "*.wasm"
   ],
   "dependencies": {
-    "node-addon-api": "^7.1.0",
-    "node-gyp-build": "^4.8.0"
+    "node-addon-api": "^8.2.1",
+    "node-gyp-build": "^4.8.2"
   },
   "devDependencies": {
-    "prebuildify": "^6.0.0",
-    "tree-sitter-cli": "^0.25.2"
+    "prebuildify": "^6.0.1",
+    "tree-sitter-cli": "^0.25.3"
   },
   "peerDependencies": {
-    "tree-sitter": "^0.25.2"
+    "tree-sitter": "^0.21.1"
   },
   "peerDependenciesMeta": {
     "tree-sitter": {
