--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,27 +3,28 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tree-sitter-verilog"
-description = "Verilog grammar for tree-sitter"
-version = "0.0.1"
-keywords = ["incremental", "parsing", "tree-sitter", "verilog"]
+name = "tree-sitter-systemverilog"
+description = "SystemVerilog 1800-2023 Parser"
+version = "0.1.0"
+keywords = ["incremental", "parsing", "tree-sitter", "systemverilog"]
 classifiers = [
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: MIT License",
   "Topic :: Software Development :: Compilers",
   "Topic :: Text Processing :: Linguistic",
-  "Typing :: Typed"
+  "Typing :: Typed",
 ]
-requires-python = ">=3.8"
+authors = [{ name = "Gonzalo M. Larumbe", email = "gonzalomlarumbe@gmail.com" }]
+requires-python = ">=3.10"
 license.text = "MIT"
 readme = "README.md"
 
 [project.urls]
-Homepage = "https://github.com/tree-sitter/tree-sitter-verilog"
+Homepage = "https://github.com/gmlarumbe/tree-sitter-systemverilog"
+Funding = "https://github.com/sponsors/gmlarumbe"
 
 [project.optional-dependencies]
-core = ["tree-sitter~=0.21"]
+core = ["tree-sitter~=0.24"]
 
 [tool.cibuildwheel]
-build = "cp38-*"
+build = "cp310-*"
 build-frontend = "build"
