Add package-lock.json file

--- a/package.json
+++ b/package.json
@@ -2,22 +2,31 @@
   "name": "tree-sitter-systemverilog",
   "version": "0.1.0",
   "description": "SystemVerilog 1800-2023 Parser",
-  "repository": "https://github.com/gmlarumbe/tree-sitter-systemverilog",
-  "funding": "https://github.com/sponsors/gmlarumbe",
-  "license": "MIT",
-  "author": {
-    "name": "Gonzalo M. Larumbe",
-    "email": "gonzalomlarumbe@gmail.com",
-    "url": "https://gmlarumbe.com/"
-  },
-  "main": "bindings/node",
-  "types": "bindings/node",
   "keywords": [
     "incremental",
     "parsing",
     "tree-sitter",
     "systemverilog"
   ],
+  "homepage": "https://github.com/gmlarumbe/tree-sitter-systemverilog#readme",
+  "bugs": {
+    "url": "https://github.com/gmlarumbe/tree-sitter-systemverilog/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gmlarumbe/tree-sitter-systemverilog.git"
+  },
+  "funding": {
+    "url": "https://github.com/sponsors/gmlarumbe"
+  },
+  "license": "MIT",
+  "author": "Gonzalo M. Larumbe <gonzalomlarumbe@gmail.com> (https://gmlarumbe.com/)",
+  "type": "commonjs",
+  "main": "bindings/node",
+  "types": "bindings/node",
+  "directories": {
+    "test": "test"
+  },
   "files": [
     "grammar.js",
     "tree-sitter.json",
@@ -28,8 +37,15 @@
     "src/**",
     "*.wasm"
   ],
+  "scripts": {
+    "install": "node-gyp-build",
+    "prestart": "tree-sitter build --wasm",
+    "start": "tree-sitter playground",
+    "test": "node --test bindings/node/*_test.js"
+  },
   "dependencies": {
     "node-addon-api": "^8.2.1",
+    "node-gyp": "^11.2.0",
     "node-gyp-build": "^4.8.2"
   },
   "devDependencies": {
@@ -43,11 +59,5 @@
     "tree-sitter": {
       "optional": true
     }
-  },
-  "scripts": {
-    "install": "node-gyp-build",
-    "prestart": "tree-sitter build --wasm",
-    "start": "tree-sitter playground",
-    "test": "node --test bindings/node/*_test.js"
   }
 }
