--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,15 +22,15 @@ jobs:
       NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
     with:
       generate: true
-  # crates:
-  #   uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
-  #   secrets:
-  #     CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
-  #   with:
-  #     generate: true
-  # pypi:
-  #   uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
-  #   secrets:
-  #     PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
-  #   with:
-  #     generate: true
+  crates:
+    uses: tree-sitter/workflows/.github/workflows/package-crates.yml@main
+    secrets:
+      CARGO_REGISTRY_TOKEN: ${{secrets.CARGO_REGISTRY_TOKEN}}
+    with:
+      generate: true
+  pypi:
+    uses: tree-sitter/workflows/.github/workflows/package-pypi.yml@main
+    secrets:
+      PYPI_API_TOKEN: ${{secrets.PYPI_API_TOKEN}}
+    with:
+      generate: true
