Disable node binds tests until these are compatible with abi 15

--- a/.github/workflows/ci_bind.yml
+++ b/.github/workflows/ci_bind.yml
@@ -66,9 +66,11 @@ jobs:
         shell: sh
         run: npm list
 
-      - name: Run tests
-        shell: sh
-        run: node --test bindings/node/*_test.js
+        # INFO: Node tests still not work with tree-sitter-cli v0.25.2
+        # See: https://github.com/tree-sitter/tree-sitter/issues/4234
+      # - name: Run tests
+      #   shell: sh
+      #   run: node --test bindings/node/*_test.js
 
       - name: Generate parser
         run: |
