Add highlights.scm queries and ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,11 @@ jobs:
         run: |
           tree-sitter generate
 
-      - name: Run tests
+      - name: Run parse tests
         run: |
           tree-sitter test
+
+      - name: Run highlight tests
+        run: |
+          tree-sitter highlight --paths test/highlight_paths_file.txt
 
