Add test submodule and update CI workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Clone tree-sitter-systemverilog
         uses: actions/checkout@v4
+        with:
+          submodules: true
 
       - name: Setup tree-sitter
         uses: tree-sitter/setup-action@v1
