--- a/.github/workflows/ci_bind.yml
+++ b/.github/workflows/ci_bind.yml
@@ -31,6 +31,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: true
 
       - name: Set up tree-sitter
         uses: tree-sitter/setup-action/cli@v1
