updated tree-sitter-cli to match generated parser.c and tree-sitter to version with the fix for lang error in node with latest cli

--- a/.github/workflows/ci_bind.yml
+++ b/.github/workflows/ci_bind.yml
@@ -70,9 +70,9 @@ jobs:
 
         # INFO: Node tests still not work with tree-sitter-cli v0.25.2
         # See: https://github.com/tree-sitter/tree-sitter/issues/4234
-      # - name: Run tests
-      #   shell: sh
-      #   run: node --test bindings/node/*_test.js
+      - name: Run tests
+        shell: sh
+        run: node --test bindings/node/*_test.js
 
       - name: Generate parser
         run: |
