--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   "dependencies": {
     "node-addon-api": "^8.2.1",
     "node-gyp": "^11.2.0",
-    "node-gyp-build": "^4.8.2"
+    "node-gyp-build": "^4.8.2",
+    "tree-sitter": "^0.25.0"
   },
   "devDependencies": {
     "prebuildify": "^6.0.1",
