Fix tree-sitter-cli version for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Setup tree-sitter
         uses: tree-sitter/setup-action@v2
+        with:
+          tree-sitter-ref: v0.25.10
 
       - name: Generate parser
         run: |
