--- a/.github/workflows/ci_bind.yml
+++ b/.github/workflows/ci_bind.yml
@@ -35,7 +35,9 @@ jobs:
           submodules: true
 
       - name: Set up tree-sitter
-        uses: tree-sitter/setup-action/cli@v2
+        uses: tree-sitter/setup-action@v2
+        with:
+          tree-sitter-ref: v0.25.10
 
       - name: Install dependencies
         run: npm ci --omit dev --omit peer --omit optional
