Add weekly job for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,10 @@
 name: CI
 on:
   workflow_dispatch:
-  pull_request:
+  schedule:
+    - cron: '0 0 * * 0' # weekly
   push:
+  pull_request:
 
 jobs:
   test:
